/*
 * Copyright 2021 Fraunhofer AISEC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 *           $$\                           $$\ $$\   $$\
 *           $$ |                          $$ |\__|  $$ |
 *  $$$$$$$\ $$ | $$$$$$\  $$\   $$\  $$$$$$$ |$$\ $$$$$$\    $$$$$$\   $$$$$$\
 * $$  _____|$$ |$$  __$$\ $$ |  $$ |$$  __$$ |$$ |\_$$  _|  $$  __$$\ $$  __$$\
 * $$ /      $$ |$$ /  $$ |$$ |  $$ |$$ /  $$ |$$ |  $$ |    $$ /  $$ |$$ | \__|
 * $$ |      $$ |$$ |  $$ |$$ |  $$ |$$ |  $$ |$$ |  $$ |$$\ $$ |  $$ |$$ |
 * \$$$$$$\  $$ |\$$$$$   |\$$$$$   |\$$$$$$  |$$ |  \$$$   |\$$$$$   |$$ |
 *  \_______|\__| \______/  \______/  \_______|\__|   \____/  \______/ \__|
 *
 * This file is part of Clouditor Community Edition.
 */
syntax = "proto3";

package clouditor;
 
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

option go_package = "api/assessment";

message Evidence {
  // the ID in a uuid format
  string id = 1;

  // reference to a service this evidence was gathered from
  string serviceId = 2;

  // reference to the resource this evidence was gathered from
  string resourceId = 3;

  // TODO: replace with google/type/date.proto
  string timestamp = 4;

  repeated string avalableMetrics = 5;
}

message Metric {
  // the ID in a uuid format
  string id = 1;

  // a human readable name of the metric
  string name = 2;

  // a description of the metric
  string description = 3;

  // TODO: what is this?
  string measuredProperty = 4;

  string category = 5;

  // TODO: make this an enum of pre-defined values?
  string scale = 6;

  // TODO: is this the tool?
  string source = 7;

  // TODO: what is this?
  string parametersId = 8;

  // TODO: what is this?
  string rulesId = 9;
}

message StoreEvidenceRequest {
  Evidence evidence = 1;
}

message TriggerAssessmentRequest {
  string someOption = 1;
}
 
service Assessment {  
  // Triggers the assement. Part of the private API, not exposed as REST.
  rpc TriggerAssessment(TriggerAssessmentRequest) returns (google.protobuf.Empty);

  // Stores the evidences coming from the discovery. Part of the public API, also exposed as REST
  rpc StoreEvidence(StoreEvidenceRequest) returns (Evidence) {
    option(google.api.http) = {
      post : "/v1/assessment/evidences" 
      body : "evidence" response_body : "*"
    };
  }
};
